Some sonarcloud fixes Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>